--- a/JHU-demo-page/css/rwg.css
+++ b/JHU-demo-page/css/rwg.css
@@ -103,7 +103,7 @@ body {
 .details-table th.columnheader {
 	font: 11px verdana,arial,tahoma,helvetica,sans-serif;
 	font-weight: bold;
-	padding: 0;
+	padding: 5;
 	border-right: 2px solid #FFF;
 	border-left: 0 none;
 	border-top: 0 none;
@@ -111,11 +111,19 @@ body {
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
 	color: white;
 	font-size: 8pt;
-	padding: 3px 3px 2px 0px;
+	padding: 3px 10px 2px 10px;
 	text-align: center;
 	background-color: #AAB8DF;
 	background-image: none;
 }
+
+.details-table td {
+	font: 11px verdana,arial,tahoma,helvetica,sans-serif;
+	padding: 5;
+	padding: 3px 10px 2px 10px;
+
+}
+
 
 .list-table
 {
